fix sidebar-icon and z-index

--- a/app/javascript/stylesheets/page/task-all.scss
+++ b/app/javascript/stylesheets/page/task-all.scss
@@ -92,3 +92,13 @@
   background-position: right center;
   color: #fff;
 }
+
+// sidebar
+
+.far.fa-plus-square, .fas.fa-tasks, .fas.fa-shoe-prints, .fas.fa-comments {
+  @apply block text-center;
+}
+
+#side-navigation {
+  @apply z-50;
+}
